<resources>
    <!--Загаловки.-->
    <string name="app_name">СП63</string>
    <string name="title_draw_view">СВОД ПРАВИЛ</string>
    <string name="anchor_label">Анкеровка и нахлестка</string>
    <string name="menu_reinforcement_title">Арматура</string>
    <string name="main_manu_title">Главное меню</string>
    <string name="menu_anchor_title">Нахлестка и анкеровка</string>
    <string name="menu_sortament_title">Сортамент</string>
    <string name="menu_r_title">Расчетные сопротивления</string>
    <string name="menu_weight_title">Калькулятор массы</string>
    <string name="menu_area_title">Расчет площади</string>

    <!--Описания-->
    <string name="close_drawer_description">close drawer</string>
    <string name="open_drawer_description">open drawer</string>
    <string name="expand_menu_description">expand menu</string>
    <string name="item_icon_description">item icon</string>
    <string name="logo_of_menu_description">logo_of_menu</string>
    <string name="about_description">about</string>
    <string name="settings_description">settings</string>
    <string name="feedback_description">feedback</string>
    <string name="home_description">Домой</string>

    <!--Названия и надписи-->
    <string name="calculate">РАССЧИТАТЬ</string>
    <string name="diameter">• Диаметр</string>
    <string name="length">• Длинна</string>
    <string name="rebar_count">• Количество стержней</string>
    <string name="one_rebar">" одного стержня"</string>
    <string name="diam_symbol">Ø</string>
    <string name="multiple_rebar">Несколько стержней</string>
    <string name="_1">1</string>
    <string name="_3000">3000</string>
    <string name="calculate_price">Считать стоимость</string>
    <string name="price">• Цена</string>
    <string name="_1000">1000</string>

    <!--Диаметры арматуры-->
    <string-array name="reinforcement_diameters">
        <item>Ø 3</item>
        <item>Ø 4</item>
        <item>Ø 5</item>
        <item>Ø 6</item>
        <item>Ø 7</item>
        <item>Ø 8</item>
        <item>Ø 10</item>
        <item>Ø 12</item>
        <item>Ø 14</item>
        <item>Ø 16</item>
        <item>Ø 18</item>
        <item>Ø 20</item>
        <item>Ø 22</item>
        <item>Ø 25</item>
        <item>Ø 28</item>
        <item>Ø 32</item>
        <item>Ø 36</item>
        <item>Ø 40</item>
    </string-array>

    <!--Единцы измерения-->
    <string-array name="length_units">
        <item>мм</item>
        <item>см</item>
        <item>дм</item>
        <item>м</item>
        <item>км</item>
    </string-array>

    <string-array name="price_units">
        <item>за метр</item>
        <item>за тонну</item>
    </string-array>

</resources>
